# vision-computacional-proyecto

./: .gitignore  README.md  flake.nix  pyproject.toml
entrega-1/cnn/: cnn_classification.ipynb
entrega-1/utils/: animal_dataset.py
entrega_1/cnn/: cnn_classification.ipynb  model.py
entrega_1/mlp/: mlp_classification.ipynb  model.py
entrega_1/utils/: early_stopping.py  testing.py  training.py
entrega_2/one_step/: one_step_detection.ipynb
entrega_2/two_steps/: two_steps_detection.ipynb
entrega_2/utils/: chess_dataset.py  testing.py  training.py
entrega_3/classifier/: model.py
entrega_3/generator/: difussion.ipynb  gan.ipynb  lora.ipynb
entrega_3/utils/: art_dataset.py  difussion.py  gan.py  metadata_generator.py
